#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hello], [1.0], [nadena.xq95@mail.ru])
AC_CONFIG_SRCDIR([src/hello.c])
AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

AC_CONFIG_FILES([Makefile src/Makefile testsuite/Makefile])
# Checks for library functions.

AC_OUTPUT
